[project]
name = "rfdiffusion"
version = "2.5"
requires-python = ">=3.9,<3.12"
dependencies = [
    "decorator",
    "e3nn",
    "hydra-core>=1.3.0",
    "icecream",
    "jedi",
    "matplotlib>3.0.0",
    "networkx>=2.1",
    "numpy>2.0.0",
    "omegaconf",
    "opt_einsum",
    "pandas",
    "pydantic>=2.0",
    "pyyaml>=6.0.2",
    "pynvml",
    "pyrsistent>=0.20.0",
    "scipy>=1.10.0",
    "tqdm",
    "wandb"
]
