[project]
name = "rfdiffusion"
version = "2.5"
requires-python = ">=3.9,<3.12"
dependencies = [
    "configparser>=7.2.0",
    "decorator>=5.1.0",
    "e3nn>=0.3.3",
    "hydra-core>=1.3.0",
    "icecream",
    "jedi",
    "matplotlib>3.0.0",
    "networkx>=2.1",
    "numpy>2.0.0",
    "omegaconf",
    "opt_einsum",
    "pandas>=2.3.0",
    "pydantic>=2.0",
    "pynvml>=11.0.0",
    "pyrsistent>=0.20.0",
    "pyyaml>=6.0.2",
    "scipy>=1.10.0",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchdata==0.8.0",
    "torchvision==0.20.1",
    "tqdm",
    "wandb>=0.12.0"
]
